[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/KBGS/startingscreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/LadyRadical.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/ThaleahFat.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Minigames/KBGS/KBGSStartMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/KGBS/victory.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/KGBS/Plastic Love [8 Bit Tribute to Mariya Takeuchi] - 8 Bit Universe.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/KGBS/GameOver4.wav" type="AudioStream" id=7]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )
Label/colors/font_color = Color( 0.980392, 0.780392, 0, 1 )
Label/colors/font_color_shadow = Color( 0.572549, 0.290196, 0.788235, 1 )
Label/colors/font_outline_modulate = Color( 0.572549, 0.290196, 0.788235, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 5
Label/constants/shadow_offset_y = 5
Label/fonts/font = ExtResource( 2 )
Label/styles/normal = null

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.980392, 0.780392, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0.980392, 0.780392, 0, 1 )
Button/colors/font_color_hover = Color( 0.745098, 0.596078, 0, 1 )
Button/colors/font_color_pressed = Color( 0.52549, 0.419608, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = ExtResource( 3 )
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 3 )
VBoxContainer/constants/separation = 48

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Victory" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.137
anchor_right = 0.5
anchor_bottom = 0.137
margin_left = -288.0
margin_top = 24.32
margin_right = 288.0
margin_bottom = 156.32
theme = SubResource( 1 )
text = "Kill bad guyS"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -56.0
margin_right = 64.0
margin_bottom = 80.0
theme = SubResource( 2 )
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 44.0
text = "Start"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 128.0
margin_bottom = 136.0
text = "Quit"

[connection signal="button_up" from="VBoxContainer/Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="VBoxContainer/Exit" to="." method="_on_Exit_button_up"]
